--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<div id="game_container" class="gameContainer">
 	</div>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	<script src="game.js" type="text/javascript"></script>
+	<script src="src/game.js" type="text/javascript"></script>
 </body>
 </html>
