--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>Untitled Platformer</title>
+<style>
+
+</style>
 </head>
 <body>
 	<div id="game_container" class="gameContainer">
